# tokio-cqrs-es2-store

./: .gitignore  Cargo.toml  ChangeLog.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml
.github/workflows/: crates-io.yml  rust-ci.yml
db/mariadb/: init.sql
db/mysql/: init.sql
db/postgres/: init.sql
examples/grpc/: Cargo.toml  Makefile  README.md
examples/grpc/proto/: bank_account_api.proto
examples/grpc/src/client/: main.rs
examples/grpc/src/server/bank_account/dispatchers/: logging_dispatcher.rs
examples/grpc/src/server/bank_account/service/: bank_account_service.rs
examples/grpc/src/server/bank_account/stores/: bank_account_stores.rs  mod.rs  mongodb_stores.rs  mysql_stores.rs  postgres_stores.rs  redis_stores.rs  sqlite_stores.rs
examples/grpc/src/server/cqrs/: mariadb_db.rs  mod.rs  mysql_db.rs  postgres_db.rs  redis_db.rs  sqlite_db.rs
examples/mongodb/: Cargo.toml  Makefile  README.md
examples/mongodb/src/server/cqrs/: db.rs
examples/postgres/: Cargo.toml  README.md
examples/postgres/src/server/bank_account/stores/: bank_account_stores.rs
src/: lib.rs
src/async_store/: event_store.rs  i_event_storage.rs  i_query_storage.rs  mod.rs  query_store.rs
src/impls/: mod.rs
src/impls/memory_store/: event_store.rs  query_store.rs
src/impls/memory_store/test/: test_event_store.rs  test_query_store.rs
src/impls/mongodb_store/: event_document.rs  event_storage.rs  event_store.rs  mod.rs  query_store.rs  snapshot_document.rs
src/impls/mongodb_store/test/: test_event_store.rs  test_query_store.rs
src/impls/redis_store/: event_storage.rs  event_store.rs  mod.rs  query_storage.rs  query_store.rs
src/impls/redis_store/test/: common.rs  test_event_store.rs  test_query_store.rs
src/impls/sql/: mod.rs  mysql_constants.rs  postgres_constants.rs
src/impls/sql/mysql_store/: event_storage.rs  event_store.rs  mod.rs  query_store.rs
src/impls/sql/mysql_store/test/: test_event_store.rs  test_query_store.rs
src/impls/sql/postgres_store/: event_storage.rs  event_store.rs  mod.rs  query_storage.rs  query_store.rs
src/impls/sql/postgres_store/test/: common.rs  test_event_store.rs  test_query_store.rs
src/impls/sql/sqlite_store/: event_storage.rs  event_store.rs  mod.rs  query_storage.rs  query_store.rs
src/impls/sql/sqlite_store/test/: test_event_store.rs  test_query_store.rs
src/memory_store/: query_store.rs
src/memory_store/test/: test_event_store.rs  test_query_store.rs
src/mongodb_store/: event_storage.rs  mod.rs  query_document.rs  query_storage.rs
src/mongodb_store/test/: common.rs  test_event_store.rs  test_query_store.rs
src/redis_store/: event_storage.rs  mod.rs
src/redis_store/test/: test_event_store.rs
src/repository/: cached_event_store.rs  cached_query_store.rs  i_event_dispatcher.rs  i_event_store.rs  i_query_store.rs  mod.rs  repository.rs
src/repository/test/: dispatchers.rs  test_repository.rs
src/sql/: event_store.rs  i_storage.rs  mod.rs  mysql_constants.rs  query_store.rs
src/sql/mysql_store/: event_storage.rs  mod.rs  query_storage.rs  storage.rs
src/sql/mysql_store/test/: common.rs  test_event_store.rs  test_query_store.rs
src/sql/postgres_store/: constants.rs  event_storage.rs  event_store.rs  query_store.rs  storage.rs
src/sql/postgres_store/test/: test_event_store.rs  test_query_store.rs
src/sql/sqlite_store/: event_storage.rs  mod.rs  storage.rs
src/sql/sqlite_store/test/: common.rs  test_event_store.rs  test_query_store.rs
