
[package]
name = "tokio-cqrs-es2-store"
version = "0.1.0"
authors = ["Bassem Girgis <brgirgis@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Async implementation of the cqrs-es2 store."
readme = "README.md"
documentation = "https://docs.rs/tokio-cqrs-es2-store"
repository = "https://github.com/brgirgis/tokio-cqrs-es2-store"
keywords = ["cqrs", "event-sourcing", "es", "DDD"]

[features]
default = ["with-all-async"]

# sqlx
with-sqlx-postgres = [
  "tokio",
  "sqlx",
  "sqlx/postgres",
  "sqlx/uuid",
  "sqlx/json",
]
with-sqlx-mysql = ["tokio", "sqlx", "sqlx/mysql"]
#with-sqlx-mssql = ["tokio", "sqlx", "sqlx/mssql"]
with-sqlx-sqlite = ["tokio", "sqlx", "sqlx/sqlite"]

with-all-sqlx = [
  "with-sqlx-postgres",
  "with-sqlx-mysql",
  #"with-sqlx-mssql",
  "with-sqlx-sqlite",
]

# documents DBs
with-mongodb = ["tokio", "futures", "mongodb"]

with-all-doc-db = ["with-mongodb"]

# key-value DBs
with-redis = ["tokio", "redis"]

with-all-kv-db = ["with-redis"]

# all async
with-all-async = ["with-all-sqlx", "with-all-doc-db", "with-all-kv-db"]

[dependencies]
# logging
log = "^0.4"

# serialization
serde = { version = "^1.0.127", features = ["derive"] }
serde_json = "^1.0.66"

async-trait = "^0.1"

# CQRS framework
cqrs-es2 = { version = "0.9.0" }

# sqlx
sqlx = { version = "0.5.6", features = [
  # tokio + rustls
  "runtime-tokio-rustls",
  # misc
  "macros",
  "chrono",
  "tls",
], optional = true }

# mongodb
mongodb = { version = "2.0.0-beta.3", default-features = false, features = [
  "tokio-runtime",
], optional = true }

# redis
redis = { version = "^0.21.1", default-features = false, features = [
  "tokio-comp",
], optional = true }

# async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
], optional = true }

futures = { version = "0.3", optional = true }

[dev-dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
tokio-test = "0.4.2"
