[package]
name = "cqrs-grpc-demo"
version = "0.1.0"
edition = "2018"
authors = ["Bassem Girgis <bgirgis@pm.me>"]


[features]
default = []

# sql
with-postgres = ["sqlx", "tokio-cqrs-es2-store/with-postgres"]
with-mysql = ["sqlx", "tokio-cqrs-es2-store/with-mysql"]
with-mariadb = ["sqlx", "tokio-cqrs-es2-store/with-mysql"]
#with-mssql = ["sqlx", "tokio-cqrs-es2-store/with-mssql"]
with-sqlite = ["sqlx", "tokio-cqrs-es2-store/with-sqlite"]

# documents DBs
with-mongodb = ["mongodb", "tokio-cqrs-es2-store/with-mongodb"]

# key-value DBs
with-redis = ["redis", "tokio-cqrs-es2-store/with-redis"]

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
# logging
log = { version = "^0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
fern = "^0.5"

# serialization
serde = { version = "^1.0.127", features = ["derive"] }
serde_json = "^1.0.66"

async-trait = "^0.1"

# CQRS framework
cqrs-es2 = { version = "0.9.0" }

# Async postgres store implementation
tokio-cqrs-es2-store = { path = "../../", default-features = false }

# sqlx
sqlx = { version = "0.5.6", default-features = false, features = [
  # tokio + rustls
  "runtime-tokio-rustls",
  # PostgresSQL
  "postgres",
  "uuid",
  "json",
  # misc
  "macros",
  "chrono",
  "tls",
], optional = true }

# mongodb
mongodb = { version = "2.0.0-beta.3", default-features = false, features = [
  "tokio-runtime",
], optional = true }

# redis
redis = { version = "^0.21.1", default-features = false, features = [
  "tokio-comp",
], optional = true }

# grpc minimum
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }

# structopt
structopt = { version = "0.3", features = ["paw"] }
#paw = "1.0"

# other
chrono = "^0.4"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.5"
